calc basic format w css

--- a/index.html
+++ b/index.html
@@ -11,26 +11,29 @@
 </head>
 
 <body>
-    <h1>Calculator</h1>
-    <!-- Create a basic HTML calculator with buttons for each digit, each of the above functions and an “Equals” key. -->
-    <div class="calc-wrap">
-        <button class="1">1</button>
-        <button class="2">2</button>
-        <button class="3">3</button>
-        <button class="4">4</button>
-        <button class="5">5</button>
-        <button class="6">6</button>
-        <button class="7">7</button>
-        <button class="8">8</button>
-        <button class="9">9</button>
-        <button class="0">0</button>
-        <button class="add">+</button>
-        <button class="sub">-</button>
-        <button class="multi">x</button>
-        <button class="divide">/</button>
-        <button class="equals">=</button>
+    <div class="container">
+        <div class="calc-wrap">
+            <button class="ac">AC</button>
+            <button class="sign">+/-</button>
+            <button class="perc">%</button>
+            <button class="add">+</button>
+            <button class="7">7</button>
+            <button class="8">8</button>
+            <button class="9">9</button>
+            <button class="sub">-</button>
+            <button class="4">4</button>
+            <button class="5">5</button>
+            <button class="6">6</button>
+            <button class="multi">x</button>
+            <button class="1">1</button>
+            <button class="2">2</button>
+            <button class="3">3</button>
+            <button class="divide">/</button>
+            <button class="zero">0</button>
+            <button class="deci">.</button>
+            <button class="equals">=</button>
+        </div>
     </div>
-
     <script src="./app.js"></script>
 </body>
 
