event listeners added for each btn

--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
             <button class="sign">+/-</button>
             <button class="perc">%</button>
             <button class="add">+</button>
-            <button class="7">7</button>
-            <button class="8">8</button>
-            <button class="9">9</button>
+            <button class="btn_7">7</button>
+            <button class="btn_8">8</button>
+            <button class="btn_9">9</button>
             <button class="sub">-</button>
-            <button class="4">4</button>
-            <button class="5">5</button>
-            <button class="6">6</button>
+            <button class="btn_4">4</button>
+            <button class="btn_5">5</button>
+            <button class="btn_6">6</button>
             <button class="multi">x</button>
-            <button class="1">1</button>
-            <button class="2">2</button>
-            <button class="3">3</button>
+            <button class="btn_1">1</button>
+            <button class="btn_2">2</button>
+            <button class="btn_3">3</button>
             <button class="divide">/</button>
             <button class="zero">0</button>
             <button class="deci">.</button>
             <button class="equals">=</button>
         </div>
     </div>
-    <script src="./app.js"></script>
+    <script src="./app.js"></script>btn_
 </body>
 
 </html>
