minor bug fixes

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
                 <div class="previous-operand"></div>
                 <div class="current-operand"></div>
             </div>
-            <button class="clear">AC</button>
+            <button class="clear span-two">AC</button>
             <button class="sign">+/-</button>
-            <button data-operator>%</button>
             <button data-operator>+</button>
             <button data-number>7</button>
             <button data-number>8</button>
@@ -35,7 +34,7 @@
             <button data-number>2</button>
             <button data-number>3</button>
             <button data-operator>÷</button>
-            <button data-number class="zero">0</button>
+            <button data-number class="span-two">0</button>
             <button class="deci">.</button>
             <button class="equals">=</button>
         </div>
